Slight misalignment fix for toggle button

--- a/styles/includes/details/main-v4.scss
+++ b/styles/includes/details/main-v4.scss
@@ -459,7 +459,6 @@
     width: 15px;
     display: inline-block;
     color: #222;
-    vertical-align: -5px;
     background: #eee;
     border-radius: 50%;
 
